--- a/src/main/resources/templates/create-server.html
+++ b/src/main/resources/templates/create-server.html
@@ -11,6 +11,7 @@
 <body>
 
 <div class="page-transition-wrapper">
+    <div class="notification-container" id="notification-container"></div>
     <div th:replace="~{fragments/common :: main-navbar(breadcrumbs=${breadcrumbs})}"></div>
 
     <div class="main-container">
