--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -35,6 +35,9 @@
                         <line x1="12" y1="8" x2="12.01" y2="8"></line>
                     </svg>
                 </a>
+                <a href="/settings" class="logout-icon-btn" title="Account">
+                    <i class="fas fa-user-circle" style="font-size: 20px;"></i>
+                </a>
                 <form method="post" th:action="@{/logout}">
                     <button class="logout-icon-btn" type="submit" title="Logout">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
