--- a/src/main/resources/templates/server.html
+++ b/src/main/resources/templates/server.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Minecraft Server - Server Management</title>
-    <th:block th:insert="~{fragments/common :: common-head}"></th:block>
+    <th:block th:insert="~{fragments/common :: head(title='Minecraft Server - Server Management')}"></th:block>
     <link th:href="@{/css/servers.css}" rel="stylesheet">
     <link th:href="@{/css/server.css}" rel="stylesheet">
 </head>
 <body th:data-id="${instance.id}">
-
+<div th:replace="~{fragments/_icon :: sprite}"></div>
 <div class="page-transition-wrapper">
     <div th:replace="~{fragments/common :: server-navbar(instanceId=${instance.id}, serverName=${instance.name}, activePage='server')}"></div>
 
@@ -76,7 +75,7 @@
                                 <div class="stat-value-action">
                                     <span class="stat-value" id="server-world">Unknown</span>
                                     <button class="action-btn btn-secondary compact" id="backup-btn">
-                                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 15v4a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-4"></path><polyline points="7,10 12,15 17,10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                                        <span th:replace="~{fragments/_icon :: icon(iconName='backup', className='icon-small')}"></span>
                                         <span>Backup</span>
                                     </button>
                                 </div>
@@ -122,7 +121,7 @@
                     <div class="card-content">
                         <div class="player-list" id="player-list">
                             <div class="empty-state">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                                <span th:replace="~{fragments/_icon :: icon(iconName='no-players', className='icon-large')}"></span>
                                 <div>No players online</div>
                             </div>
                         </div>
@@ -135,7 +134,7 @@
                     <div class="card-header">
                         <h3 class="card-title">Core Properties</h3>
                         <button class="action-btn btn-secondary compact" id="refresh-properties">
-                            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"/><path d="M21 3v5h-5"/><path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"/><path d="M3 21v-5h5"/></svg>
+                            <span th:replace="~{fragments/_icon :: icon(iconName='refresh', className='icon-small')}"></span>
                             <span>Reload</span>
                         </button>
                     </div>
@@ -160,8 +159,8 @@
         <div class="modal-body">
             <div class="whitelist-add-form">
                 <input type="text" id="whitelist-player-input" class="property-input" placeholder="Enter player name...">
-                <button id="add-whitelist-btn" class="action-btn btn-primary">
-                    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+                                <button id="add-whitelist-btn" class="action-btn btn-primary">
+                    <span th:replace="~{fragments/_icon :: icon(iconName='add', className='icon-small')}"></span>
                     <span>Add Player</span>
                 </button>
             </div>
@@ -175,4 +174,19 @@
 <th:block th:insert="~{fragments/common :: common-scripts}"></th:block>
 
 </body>
-</html>
+</html>ents/common :: common-scripts}"></th:block>
+
+</body>
+</html>body>
+</html>ents/common :: common-scripts}"></th:block>
+
+</body>
+</html>tml>tml></body>
+</html>ents/common :: common-scripts}"></th:block>
+
+</body>
+</html>body>
+</html>ents/common :: common-scripts}"></th:block>
+
+</body>
+</html>tml>tml>
