--- a/src/main/resources/templates/servers.html
+++ b/src/main/resources/templates/servers.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Minecraft Panel - Servers</title>
-    <th:block th:insert="~{fragments/common :: common-head}"></th:block>
+    <th:block th:insert="~{fragments/common :: head(title='Minecraft Panel - Servers')}"></th:block>
     <link rel="stylesheet" th:href="@{/css/servers.css}">
 </head>
 <body>
-
+<div th:replace="~{fragments/_icon :: sprite}"></div>
 <div class="page-transition-wrapper">
     <div class="notification-container" id="notification-container"></div>
-
     <div th:replace="~{fragments/common :: main-navbar(breadcrumbs=${breadcrumbs})}"></div>
-
     <div class="main-container">
         <div class="page-header">
             <div>
@@ -42,7 +37,8 @@
                 <i class="fas fa-server"></i>
             </div>
             <h2 class="empty-state-title">No Servers Yet!</h2>
-            <p class="empty-state-description">It looks a bit empty here. Let's get your first Minecraft server up and running.</p>
+            <p class="empty-state-description">It looks a bit empty here. Let's get your first Minecraft server up and
+                running.</p>
             <a href="/servers/create" class="btn btn-primary">
                 <i class="fas fa-plus"></i> Create Your First Server
             </a>
@@ -55,7 +51,7 @@
         <div class="modal-header">
             <h3>Delete Server</h3>
             <button class="close-btn" id="close-delete-modal">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                <span th:replace="~{fragments/_icon :: icon(iconName='close', className='icon-medium')}"></span>
             </button>
         </div>
         <div class="modal-body">
@@ -79,7 +75,5 @@
 
 <script th:src="@{/js/servers.js}"></script>
 <th:block th:insert="~{fragments/common :: common-scripts}"></th:block>
-
 </body>
-</html>
 </html>
