--- a/src/main/resources/templates/server.html
+++ b/src/main/resources/templates/server.html
@@ -89,24 +89,20 @@
                         <h3 class="card-title">Resource Usage</h3>
                     </div>
                     <div class="card-content">
-                        <div class="stat-list">
-                            <div class="stat-item">
-                                <span class="stat-label">CPU Usage</span>
-                                <span class="stat-value" id="cpu-usage">0%</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-label">RAM Usage</span>
-                                <span class="stat-value" id="ram-usage">0 GB / 0 GB</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-label">Disk Usage</span>
-                                <span class="stat-value" id="disk-usage">0 GB / 0 GB</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-label">Last Updated</span>
-                                <span class="stat-value" id="last-updated">Never</span>
-                            </div>
-                        </div>
+                        <div class="server-details">
+                    <div class="detail-item">
+                        <span class="detail-label">CPU Usage:</span>
+                        <span class="detail-value" id="cpu-usage">0%</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">RAM Usage:</span>
+                        <span class="detail-value" id="ram-usage">Offline</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">Disk Usage:</span>
+                        <span class="detail-value" id="disk-usage">0 MB</span>
+                    </div>
+                </div>
                     </div>
                 </div>
 
@@ -174,19 +170,4 @@
 <th:block th:insert="~{fragments/common :: common-scripts}"></th:block>
 
 </body>
-</html>ents/common :: common-scripts}"></th:block>
-
-</body>
-</html>body>
-</html>ents/common :: common-scripts}"></th:block>
-
-</body>
-</html>tml>tml></body>
-</html>ents/common :: common-scripts}"></th:block>
-
-</body>
-</html>body>
-</html>ents/common :: common-scripts}"></th:block>
-
-</body>
-</html>tml>tml>
+</html>
