--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
 
             <button type="submit" class="login-button">Login</button>
         </form>
-        <button id="restore-defaults" class="restore-defaults-button">Restore Defaults</button>
+<!--        <button id="restore-defaults" class="restore-defaults-button">Restore Defaults</button>-->
     </div>
 </div>
 
