--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,7 @@
     <link th:href="@{/css/login.css}" rel="stylesheet">
 </head>
 <body>
+<div th:replace="~{fragments/common :: notifications}"></div>
 <div class="container">
     <div class="login-form">
         <h1 class="title">MCPanel</h1>
