--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -14,7 +14,7 @@
             <h1 class="page-title">Account Settings</h1>
         </div>
 
-        <div class="notification-container" id="notification-container"></div>
+        <div th:replace="~{fragments/common :: notifications}"></div>
 
         <div class="cards-grid">
             <div class="card">
