--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -11,6 +11,7 @@
     <link th:href="@{/css/setup.css}" rel="stylesheet">
 </head>
 <body>
+<div th:replace="~{fragments/common :: notifications}"></div>
 <div class="container">
     <div class="setup-form">
         <h1 class="title">INITIAL SETUP</h1>
