--- a/src/main/resources/templates/console.html
+++ b/src/main/resources/templates/console.html
@@ -11,7 +11,7 @@
 <body th:data-instance-id="${instanceId}">
 <div th:replace="~{fragments/_icon :: sprite}"></div>
 <div class="page-transition-wrapper">
-    <div class="notification-container" id="notification-container"></div>
+    <div th:replace="~{fragments/common :: notifications}"></div>
     <div th:replace="~{fragments/common :: server-navbar(instanceId=${instanceId}, serverName=${instanceName}, activePage='console')}"></div>
 
     <div class="main-container">
