--- a/src/main/resources/templates/server.html
+++ b/src/main/resources/templates/server.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="notification-container" id="notification-container"></div>
+        <div th:replace="~{fragments/common :: notifications}"></div>
 
         <div class="page-content">
             <div class="main-column">
